more changes and cause i'm having a hard time with github another upload :D

--- a/code/index.html
+++ b/code/index.html
@@ -8,11 +8,10 @@
     <meta name="viewport" content="width=devise-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amiri&display=swap" rel="stylesheet">
-   
   </head>
+
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header> <!-- Some kind of logo and navbar -->
       <img src="../images/logo.jpg" alt="Logo">
       <h1>Noemi's Music Magazine</h1>
       <nav>
@@ -25,8 +24,7 @@
       </nav>
     </header>
 
-    <section class="artist-of-the-month">
-    <!-- The big news content -->
+    <section class="artist-of-the-month">  <!-- The big news content -->
       <img src ="../images/priya_ragu.jpg" alt="Priya Ragu">
       <h2>Priya Ragu</h2>
       <p class="mainarticle">
@@ -41,44 +39,56 @@
         </p>
     </section>
 
-    <section class="previous-artists">
-    <!-- The other news  -->
+    <section class="previous-artists">  <!-- The other news  -->
       <Div class="artist">
+        <a href="../previous_artists/loyle.html">
         <h3>Loyle Carner</h3>
           <p>Loyle Carner has shared a new song "Yesterday." The track is produced by Madlib and is the British rapper's first release since 2019 album Not Waving, But Drowning.</p>
           <p class="autor-pubished">by Noemi, 01.01.2021</p>
-      </Div>
+      </Div></a>
 
       <Div class="artist">
+        <a href="../previous_artists/barney.html">
         <h3>Barney Artist</h3>
           <p>Barney Artist is the laid-back, seriously woke rap maestro that demands your attention. </p>
-      </Div>
+          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+        </Div></a>
 
       <Div class="artist"> 
+        <a href="../previous_artists/celeste.html">
        <h3>Celeste</h3>
           <p>If British singer-songwriter Celeste isn’t already on your radar, chances are you’ll be her biggest fan by the end of the year.</p>
-      </Div>
+          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+        </Div></a>
       
       <Div class="artist">
+        <a href="../previous_artists/cleo.html">
         <h3>Cleo Sol</h3>
           <p>20 year old Cleo Sol was born to musical parents who met in a Jazz band.</p>
-      </Div>
+          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+        </Div></a>
 
       <Div class="artist">
+        <a href="../previous_artists/foxwarren.html">
         <h3>Foxwarren</h3>
           <p>Foxwarren’s backstory reads like a page torn from the manual of rock & roll authenticity, as this group of siblings and childhood 
           friends originally formed more than a decade ago.</p>
-      </Div>
+          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+        </Div></a>
 
       <Div class="artist">
+        <a href="../previous_artists/joy.html">
         <h3>Joy Crookes</h3>
           <p>Joy Crookes is 19 year old south London born songstress straddling soul, trip-hop and R&B.</p>
-      </Div>
+          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+      </Div></a>
       
       <Div class="artist">
+        <a href="../previous_artists/arlo.html">
         <h3>Arlos Parks</h3>
           <p>Arlo Parks is a 20 year old poet/singer from London.</p>
-      </Div>
+          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+        </Div></a>
 
     </section>
   </body>
