for now finished mobile site

--- a/previous_artists/barney.html
+++ b/previous_artists/barney.html
@@ -1,6 +1,36 @@
+<!DOCTYPE html>
+<html lang="eng"></html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Project 2: Noemi's Music Magazine</title>
+    <link rel="stylesheet" href="../code/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amiri&display=swap" rel="stylesheet">
+  </head>
+
+  <body>
+    <div class="header"> <!-- Some kind of logo and navbar -->  
+      <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
+    </div>
+      <nav>
+        <ul>
+          <div><li><a href="../code/index.html">Home</a></li></div>
+          <div><li>Concerts</li></div>
+          <div><li>Events</li></div>
+          <div><li>About</li></div>
+        </ul>
+      </nav>
+    </header>
+
+<img class="img-artist" src ="../images/barney.jpg" alt="Barney Artist">  
 <p>Barney Artist is the laid-back, seriously woke rap maestro that demands your attention. The 26-year-old east Londoner fuses 90s era boom bap hip-hop with jazz for a refreshing 
     sound harkening back to legends such as A Tribe Called Quest and The Roots, and taking influence from prolific UK artists including Kano and Ghostpoet. His sprawling content, 
     consisting of love, loss and religion, is incredibly see through and relatable, as he guides the listener through his multifaceted life. Set to release his debut album later 
     this year, the follow up to 2014 mixtape Bespoke and 2016’s Painting Sounds, he is laying down yet more bricks of his life, mapping out an overall journey of self-discovery and growth. 
     “I’m really proud of this album,” Barney says, “because I know that’s what I stand for and how I want people to feel about what I say, and now I have a platform to say it. 
     The ability to be able to do that is important.”
+
+</body>
+</html>
