--- a/previous_artists/celeste.html
+++ b/previous_artists/celeste.html
@@ -1,3 +1,30 @@
+<!DOCTYPE html>
+<html lang="eng"></html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Project 2: Noemi's Music Magazine</title>
+    <link rel="stylesheet" href="../code/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amiri&display=swap" rel="stylesheet">
+  </head>
+
+  <body>
+    <div class="header"> <!-- Some kind of logo and navbar -->  
+      <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
+    </div>
+      <nav>
+        <ul>
+          <div><li><a href="../code/index.html">Home</a></li></div>
+          <div><li>Concerts</li></div>
+          <div><li>Events</li></div>
+          <div><li>About</li></div>
+        </ul>
+      </nav>
+    </header>
+
+<img class="img-artist" src ="../images/celeste.jpg" alt="Celeste">
 <h3>Celeste</h3>
        <p>If British singer-songwriter Celeste isn’t already on your radar, chances are you’ll be her biggest fan by the end of the year. 
        The 26-year-old artist recently won BBC’s Sound of 2020, and took home the Brit Rising Star Award—a kind of barometer of future success (previous winners include Sam Smith, Haim, and Adele).
@@ -7,3 +34,5 @@
        and directed by Sophie Jones via Zoom—the black-and-white clip is the singer’s most evocative visual to date. Channeling the old-school 
        glamour of classic film noir, Celeste sings of her desire for change in many forms alongside footage from a 1963 Martin Luther King Jr. 
        rally: “I can see the change / Come what may, I won’t regret today / I am what remains / Standing here in spite of everything.”</p>
+</body>
+</html>
