--- a/previous_artists/foxwarren.html
+++ b/previous_artists/foxwarren.html
@@ -1,3 +1,30 @@
+<!DOCTYPE html>
+<html lang="eng"></html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Project 2: Noemi's Music Magazine</title>
+    <link rel="stylesheet" href="../code/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amiri&display=swap" rel="stylesheet">
+  </head>
+
+  <body>
+    <div class="header"> <!-- Some kind of logo and navbar -->  
+      <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
+    </div>
+      <nav>
+        <ul>
+          <div><li><a href="../code/index.html">Home</a></li></div>
+          <div><li>Concerts</li></div>
+          <div><li>Events</li></div>
+          <div><li>About</li></div>
+        </ul>
+      </nav>
+    </header>
+
+<img class="img-artist" src ="../images/foxwarren.jpg" alt="Foxwarren">
 <h3>Foxwarren</h3>
 <p>Foxwarren’s backstory reads like a page torn from the manual of rock & roll authenticity, as this group of siblings and childhood 
 friends originally formed more than a decade ago. Growing up in scattered small towns across the Canadian prairies, Andy Shauf 
@@ -6,3 +33,5 @@ eventually found themselves in Regina, Saskatchewan. The initial sessions for th
 parents’ farmhouse while they were away on vacation. Upon their return, Foxwarren were forced to relocate and recording resumed 
 back in Regina in a rented house where the members lived as roommates. The band's name comes from the Kissick brothers’ family 
 home in Foxwarren, Manitoba.</p>
+</body>
+</html>
