--- a/code/index.html
+++ b/code/index.html
@@ -5,29 +5,30 @@
     <meta charset="utf-8" />
     <title>Project 2: Noemi's Music Magazine</title>
     <link rel="stylesheet" href="./style.css" />
-    <meta name="viewport" content="width=devise-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amiri&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amiri&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <header> <!-- Some kind of logo and navbar -->
-      <img src="../images/logo.jpg" alt="Logo">
-      <h1>Noemi's Music Magazine</h1>
+    <div class="header"> <!-- Some kind of logo and navbar -->  
+      <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
+    </div>
       <nav>
         <ul>
-          <li>Home</li>
-          <li>Concerts</li>
-          <li>Events</li>
-          <li>About Us</li>
+          <div><li><a href="../code/index.html">Home</a></li></div>
+          <div><li>Concerts</li></div>
+          <div><li>Events</li></div>
+          <div><li>About</li></div>
         </ul>
       </nav>
     </header>
 
-    <section class="artist-of-the-month">  <!-- The big news content -->
-      <img src ="../images/priya_ragu.jpg" alt="Priya Ragu">
+    <section class="mainarticle">  <!-- The big news content -->
+      <img class="img-artist" src ="../images/priya.jpg" alt="Priya Ragu">
       <h2>Priya Ragu</h2>
-      <p class="mainarticle">
+      <p class="author">by Noemi, 01.01.2021</p>
+      <p>
         The child of Sri Lankan parents, Ragu would sing in Tamil at family functions and made her stamp on the Zurich music scene from an early age. She just never thought her music would be heard by millions.
         “In Switzerland you don’t see that many artists that break through internationally, so there was no one to look up to, she says. ​“I didn’t feel [a music career] was really realistic for me.”
         In 2019 she quit her 9 – 5 and travelled to New York, setting herself one task – to write ten songs in six months. While she was there she hit up US rapper and long-term friend Oddisee and recorded her soulful tracks in his studio, giving her momentum, recognition and most importantly, self-belief.
@@ -40,54 +41,54 @@
     </section>
 
     <section class="previous-artists">  <!-- The other news  -->
-      <Div class="artist">
+      <Div class="loyle">
         <a href="../previous_artists/loyle.html">
         <h3>Loyle Carner</h3>
-          <p>Loyle Carner has shared a new song "Yesterday." The track is produced by Madlib and is the British rapper's first release since 2019 album Not Waving, But Drowning.</p>
-          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+          <p class="author">by Noemi, 01.01.2021</p>
+          <p>Loyle Carner has shared a new song "Yesterday." The track is produced by Madlib and is the British rapper's first release since 2019 album Not Waving, But Drowning. ...</p>
       </Div></a>
 
-      <Div class="artist">
+      <Div class="barney">
         <a href="../previous_artists/barney.html">
         <h3>Barney Artist</h3>
-          <p>Barney Artist is the laid-back, seriously woke rap maestro that demands your attention. </p>
-          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+          <p class="author">by Noemi, 01.01.2021</p>
+          <p>Barney Artist is the laid-back, seriously woke rap maestro that demands your attention. ...</p>
         </Div></a>
 
-      <Div class="artist"> 
+      <Div class="celeste"> 
         <a href="../previous_artists/celeste.html">
-       <h3>Celeste</h3>
-          <p>If British singer-songwriter Celeste isn’t already on your radar, chances are you’ll be her biggest fan by the end of the year.</p>
-          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+        <h3>Celeste</h3>
+          <p class="author">by Noemi, 01.01.2021</p>
+          <p>If British singer-songwriter Celeste isn’t already on your radar, chances are you’ll be her biggest fan by the end of the year. ...</p>
         </Div></a>
       
-      <Div class="artist">
+      <Div class="cleo">
         <a href="../previous_artists/cleo.html">
         <h3>Cleo Sol</h3>
-          <p>20 year old Cleo Sol was born to musical parents who met in a Jazz band.</p>
-          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+        <p class="author">by Noemi, 01.01.2021</p>  
+        <p>20 year old Cleo Sol was born to musical parents who met in a Jazz band. ...</p>
         </Div></a>
 
-      <Div class="artist">
+      <Div class="foxwarren">
         <a href="../previous_artists/foxwarren.html">
         <h3>Foxwarren</h3>
-          <p>Foxwarren’s backstory reads like a page torn from the manual of rock & roll authenticity, as this group of siblings and childhood 
-          friends originally formed more than a decade ago.</p>
-          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+        <p class="author">by Noemi, 01.01.2021</p>  
+        <p>Foxwarren’s backstory reads like a page torn from the manual of rock & roll authenticity, as this group of siblings and childhood 
+          friends originally formed more than a decade ago. ...</p>
         </Div></a>
 
-      <Div class="artist">
+      <Div class="joy">
         <a href="../previous_artists/joy.html">
         <h3>Joy Crookes</h3>
-          <p>Joy Crookes is 19 year old south London born songstress straddling soul, trip-hop and R&B.</p>
-          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+        <p class="author">by Noemi, 01.01.2021</p>  
+        <p>Joy Crookes is 19 year old south London born songstress straddling soul, trip-hop and R&B. ...</p>
       </Div></a>
       
-      <Div class="artist">
+      <Div class="arlo">
         <a href="../previous_artists/arlo.html">
-        <h3>Arlos Parks</h3>
-          <p>Arlo Parks is a 20 year old poet/singer from London.</p>
-          <p class="autor-pubished">by Noemi, 01.01.2021</p>
+        <h3>Arlo Parks</h3>
+        <p class="author">by Noemi, 01.01.2021</p>  
+        <p>Arlo Parks is a 20 year old poet/singer from London. ...</p>
         </Div></a>
 
     </section>
