--- a/previous_artists/arlo.html
+++ b/previous_artists/arlo.html
@@ -1,4 +1,34 @@
-<h3>Arlos Parks</h3>
+<!DOCTYPE html>
+<html lang="eng"></html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Project 2: Noemi's Music Magazine</title>
+    <link rel="stylesheet" href="../code/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amiri&display=swap" rel="stylesheet">
+  </head>
+
+  <body>
+    <div class="header"> <!-- Some kind of logo and navbar -->  
+      <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
+    </div>
+      <nav>
+        <ul>
+          <div><li><a href="../code/index.html">Home</a></li></div>
+          <div><li>Concerts</li></div>
+          <div><li>Events</li></div>
+          <div><li>About</li></div>
+        </ul>
+      </nav>
+    </header>
+
+<img class="img-artist" src ="../images/arlo.jpg" alt="Arlo Parks">
+<h3>Arlo Parks</h3>
     <p>Arlo Parks is a 20 year old poet/singer from London. In her words she spent most of school feeling like that black kid who couldn't 
     dance for shit, listening to too much emo music and crushing on some girl in her Spanish class. Her songs are confessional and tender, 
     mainly inspired by Portishead and Earl Sweatshirt. </p>
+
+</body>
+</html>
