--- a/previous_artists/joy.html
+++ b/previous_artists/joy.html
@@ -1,5 +1,34 @@
+<!DOCTYPE html>
+<html lang="eng"></html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Project 2: Noemi's Music Magazine</title>
+    <link rel="stylesheet" href="../code/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amiri&display=swap" rel="stylesheet">
+  </head>
+
+  <body>
+    <div class="header"> <!-- Some kind of logo and navbar -->  
+      <h1>Noemi's Music Magazine <img src="../images/logo.jpg" alt="Logo" height="40px"> </h1>
+    </div>
+      <nav>
+        <ul>
+          <div><li><a href="../code/index.html">Home</a></li></div>
+          <div><li>Concerts</li></div>
+          <div><li>Events</li></div>
+          <div><li>About</li></div>
+        </ul>
+      </nav>
+    </header>
+
+<img class="img-artist" src ="../images/joy.jpg" alt="Joy Crookes">
 <h3>Joy Crookes</h3>
     <p>Joy Crookes is 19 year old south London born songstress straddling soul, trip-hop and R&B. Half-Bengali/Half-Irish in heritage; 
         Joy’s is a dexterous sound, which effortlessly showcases her melting pot of sonic influences. Joy balances the retro stylings of 
         Sade with the millennial wit of Lily Allen – songs that aren’t afraid to be honest and raw, while also packing a political punch. 
         She may be looking to the past, but smart, talented and strong, she is shaping the sound of the future.</p>
+</body>
+</html>
