Added general structure to the code

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">     <!-- dont forget the meta tag for responsiveness -->
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="#">
+      <nav></nav> <!--Navbar -->
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <!-- Two divs; one for the image and one for the text to the image-->
+      <div class="big-news-image"></div> <!-- should the images be in div or just use <img>? -->
+      <div class="big-news-text"></div>
     </section>
 
-    <section class="">
+    <section class="other-news">
       <!-- The other news  -->
+      <div class="other-news-image"></div>
+      <div class="other-news-image"></div>
+      <div class="other-news-image"></div>
+      <div class="other-news-image"></div>
+      <div class="other-news-image"></div>
+      <div class="other-news-image"></div>
+      <div class="other-news-image"></div>
+      <div class="other-news-image"></div>
     </section>
   </body>
 </html>
