--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,105 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
+  
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+      <div class="container">
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+        <!--Navigation bar and logo-->
+        <header>        
+            <div class="hamburger-menu">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+            <img src="./logo.svg" alt="Technigo logo">
+
+            <div class="main-menu">
+              <label class="logo">Jokes Aside</label>
+                <nav>
+                  <a href="#">Menu1</a>
+                  <a href="#">Menu1</a>
+                  <a href="#">Menu1</a>
+                  <a href="#">Menu1</a>
+                  <a href="#">Menu1</a>               
+                </nav>
+            </div>
+        </header>
+
+
+        <!--Big news section-->
+
+          <section class="big-news-container">
+                <div class="big-news-article-1">
+                    <article>
+                      <h1>First big news</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
+                    </article>
+                </div>
+                                
+                <div class="big-news-article-2">
+                      <article>
+                        <h1>Seconds big news</h1>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
+                      </article>
+                </div>
+            </section>
+
+        <!--Sub-news section-->
+
+            <section class="sub-news-container">
+                  <div class="sub-news-article-1">
+                      <article>
+                        <h1>First sub news</h1>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>                  
+                      </article>
+                  </div>
+
+                  <div class="sub-news-article-2">
+                      <article>
+                        <h1>Second sub news</h1>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
+                      </article>
+                  </div>
+
+                  <div class="sub-news-article-3">
+                      <article>
+                        <h1>Third sub news</h1>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
+                      </article>
+                  </div>
+
+                  <div class="sub-news-article-4">
+                      <article>
+                        <h1>Fourth sub news</h1>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>                  
+                      </article>
+                  </div>
+
+                  <div class="sub-news-article-5">
+                      <article>
+                        <h1>Fifth sub news</h1>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
+                      </article>
+                  </div>
+
+                  <div class="sub-news-article-6">
+                      <article>
+                        <h1>Sixth sub news</h1>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
+                      </article>
+                  </div>
+          </section>
+
+            <footer></footer>
+
+      </div>
   </body>
 </html>
