added grid system

--- a/code/index.html
+++ b/code/index.html
@@ -56,48 +56,60 @@
   </section>
 
   <section class="small-news">
-    <div class="block">
-      <container class="image-container">
-        <img src="../pictures/SLSmegarocket.jpg">
-      </container>
-      <container class="text-container">
-        <h3>NASA test-fires SLS engines</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw
-          <a href="" target="blank">&gt;</a>
-        </p>
-      </container>
-    </div>
-    <div class="block">
-      <container class="image-container">
-        <img src="../pictures/WilliamThornton.jpg">
-      </container>
-      <container class="text-container">
-        <h3>Astronaut William Thornton dead</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw</p>
-      </container>
-    </div>
-    <div class="block">
-      <container class="image-container">
-        <img src="../ISS.jpg">
-      </container>
-      <container class="text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi minima!
-        </p>
-      </container>
-    </div>
-    <div class="block">
-      <container class="image-container">
-        <img src="../ISS.jpg">
-      </container>
-      <container class="text-container">
-        <h3>Small news</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-          eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi minima!
-        </p>
-      </container>
-    </div>
+    <container class="small-news-grid">
+      <div class="block">
+        <container class="image-container">
+          <img src="../pictures/SLSmegarocket.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>NASA test-fires SLS engines</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw
+            <a href="" target="blank">&gt;</a>
+          </p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../pictures/WilliamThornton.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>Astronaut William Thornton dead</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw</p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../ISS.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>Small news</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+            eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi
+            minima!
+          </p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../ISS.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>Small news</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+            eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi
+            minima!
+          </p>
+        </container>
+      </div>
+    </container>
   </section>
 </body>
 
