removed unecessary code

--- a/code/index.html
+++ b/code/index.html
@@ -11,20 +11,11 @@
 <body>
   <header>
     <nav>
-      <div class="menu-wrapper">
-        <button class="menu-button"></button>
-        <div class="menu-content">
-          <a href="contact.html" target="blank">contact</a>
-          <a href="contact.html" target="blank">about</a>
-          <a href="contact.html" target="blank">sign up</a>
-          <a href="contact.html" target="blank">login</a>
-        </div>
-      </div>
-      <div id="about">
+      <div class="links">
         <a href="contact.html" target="blank">contact</a>
         <a href="contact.html" target="blank">about</a>
       </div>
-      <div id="signup">
+      <div class="links">
         <a href="contact.html" target="blank">sign up</a>
         <a href="contact.html" target="blank">login</a>
       </div>
