added metatag for responsiveness and divs as flex containers

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
+
+<body>
+  <div class="header-flexcontainer">
     <header>
       <!-- Some kind of logo and navbar -->
     </header>
-
+  </div>
+  <div class="big-section-flexcontainer">
     <section class="big-news">
       <!-- The big news content -->
     </section>
-
-    <section class="">
+  </div>
+  <div>
+    <section class="small-news-flexcontainer">
       <!-- The other news  -->
     </section>
-  </body>
+  </div>
+</body>
+
 </html>
