added all my html code

--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,47 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&family=Permanent+Marker&family=Shadows+Into+Light&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <nav>
+        <h1>Good News Only</h1>
+        <p>Puppies</p>
+        <p>Kittens</p>
+        <p>Other Baby Animals</p>
+        <p>Contact</p>
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <img src="Lostdog.jpg" />
+      <section class="big-news-text">
+        <h2>STORA NYHETEN</h2>
+        <h4>You can never believe what happened next!!! Read more here.....</h4>
+      </section>
     </section>
 
-    <section class="">
+    <hr />
+
+    <section class="news-scroll">
       <!-- The other news  -->
+      <p>Nyhet 1</p>
+      <img src="pomegranate.jpg" />
+      <p>Nyhet 2</p>
+      <img src="apple.jpg" />
+      <p>Nyhet 3</p>
+      <img src="pills.jpg" />
+      <p>Nyhet 4</p>
+      <img src="strawberries.jpg" />
     </section>
+    <footer><strong> &copy; Good News Co 2021 </strong></footer>
   </body>
 </html>
