updated the grid and responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -11,14 +11,10 @@
 <body>
   <header>
     <nav>
-      <div class="links">
         <a href="contact.html" target="blank">contact</a>
         <a href="contact.html" target="blank">about</a>
-      </div>
-      <div class="links">
         <a href="contact.html" target="blank">sign up</a>
         <a href="contact.html" target="blank">login</a>
-      </div>
       <div class="searchbar">
         <input type="text" placeholder="Search..">
         <button class="search-button"><img src="../pictures/magnify.png"></button>
@@ -40,9 +36,9 @@
         rerum placeat, quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi minima!
         <br>
         <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque nobis quas rerum. Eligendi quo vero,
-        iusto fugiat, tempore, possimus sunt tempora cumque maxime minus a porro esse! Aspernatur, voluptates.
+        iusto fugiat, tempore, possimus sunt tempora cumque maxime minus a porro esse! Aspernatur, voluptates.<br>
+        <a href="" target="blank">&gt; Keep reading &lt;</a>
       </p>
-      <a href="" target="blank">&gt; Keep reading &lt;</a>
     </container>
   </section>
 
@@ -56,7 +52,7 @@
       <div class="block">
         <container class="text-container">
           <h3>NASA test-fires SLS engines</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
             <a href="" target="blank">&gt;</a>
           </p>
         </container>
@@ -69,20 +65,8 @@
       <div class="block">
         <container class="text-container">
           <h3>Astronaut William Thornton dead</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw</p>
-        </container>
-      </div>
-      <div class="block">
-        <container class="image-container">
-          <img src="../ISS.jpg">
-        </container>
-      </div>
-      <div class="block">
-        <container class="text-container">
-          <h3>Small news</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-            eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi
-            minima!
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
+            <a href="" target="blank">&gt;</a>
           </p>
         </container>
       </div>
@@ -95,8 +79,124 @@
         <container class="text-container">
           <h3>Small news</h3>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
-            eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! Magni minus repudiandae eligendi sequi
-            minima!
+            eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">&gt;</a>
+          </p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../ISS.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>Small news</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+            eligendi, rerum placeat <br><a href="" target="blank">&gt;</a>
+          </p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../ISS.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>Small news</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+            eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
+          </p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../ISS.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>Small news</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+            eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
+          </p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../pictures/SLSmegarocket.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>NASA test-fires SLS engines</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjh wkhk hgwkhkw hklhglw<br>
+            <a href="" target="blank">&gt;</a>
+          </p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../pictures/WilliamThornton.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>Astronaut William Thornton dead</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. jewhjkklhwk jhekjhwkhk hgwkhkwhklhglw<br>
+            <a href="" target="blank">&gt;</a>
+          </p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../ISS.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>Small news</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+            eligendi, rerum placeat, quibusdam recusandae saepe reiciendis! <br><a href="" target="blank">&gt;</a>
+          </p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../ISS.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>Small news</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+            eligendi, rerum placeat <br><a href="" target="blank">&gt;</a>
+          </p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../ISS.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>Small news</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+            eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
+          </p>
+        </container>
+      </div>
+      <div class="block">
+        <container class="image-container">
+          <img src="../ISS.jpg">
+        </container>
+      </div>
+      <div class="block">
+        <container class="text-container">
+          <h3>Small news</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id adipisci eum ipsa, facere atque ea a aut
+            eligendi, rerum placeat, quibusdam <br><a href="" target="blank">&gt;</a>
           </p>
         </container>
       </div>
